@@ -16,8 +16,8 @@ import org.jabref.gui.DialogService;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
 import org.jabref.gui.util.FileDialogConfiguration;
 import org.jabref.logic.journals.Abbreviation;
+import org.jabref.logic.journals.AbbreviationPreferences;
 import org.jabref.logic.journals.JournalAbbreviationLoader;
-import org.jabref.logic.journals.JournalAbbreviationPreferences;
 import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.util.BackgroundTask;
@@ -51,11 +51,11 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
     private final DialogService dialogService;
     private final TaskExecutor taskExecutor;
 
-    private final JournalAbbreviationPreferences abbreviationsPreferences;
+    private final AbbreviationPreferences abbreviationsPreferences;
     private final JournalAbbreviationRepository journalAbbreviationRepository;
     private boolean shouldWriteLists;
 
-    public JournalAbbreviationsTabViewModel(JournalAbbreviationPreferences abbreviationsPreferences,
+    public JournalAbbreviationsTabViewModel(AbbreviationPreferences abbreviationsPreferences,
                                             @NonNull DialogService dialogService,
                                             @NonNull TaskExecutor taskExecutor,
                                             @NonNull JournalAbbreviationRepository journalAbbreviationRepository) {
@@ -238,11 +238,11 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
     }
 
     private void setCurrentAbbreviationNameAndAbbreviationIfValid(Abbreviation abbreviationObject) {
-        if (abbreviationObject.getName().trim().isEmpty()) {
+        if (abbreviationObject.getName().isBlank()) {
             dialogService.showErrorDialogAndWait(Localization.lang("Name cannot be empty"));
             return;
         }
-        if (abbreviationObject.getAbbreviation().trim().isEmpty()) {
+        if (abbreviationObject.getAbbreviation().isBlank()) {
             dialogService.showErrorDialogAndWait(Localization.lang("Abbreviation cannot be empty"));
             return;
         }
